// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Well should match snapshot 1`] = `
<div
  className="well"
/>
`;

exports[`Well should take regular element attributes 1`] = `
<div
  className="well my-class"
/>
`;
